--- a/feedbackSystem/base/templates/base/signup.html
+++ b/feedbackSystem/base/templates/base/signup.html
@@ -1,7 +1,8 @@
 {% extends 'base/home.html' %}
-
 {% load static %}
 {% load i18n %}
+
+{% block title%}{% translate "Sign Up" %} - {% endblock %}
 
 {% block content %}
 <div class="container border rounded-5 shadow" style="max-width: 992px; background-color: white;">
