--- a/feedbackSystem/base/templates/base/login.html
+++ b/feedbackSystem/base/templates/base/login.html
@@ -1,9 +1,8 @@
 {% extends 'base/home.html' %}
-
 {% load static %}
 {% load i18n %}
 
-{% block title%}{% translate "Login" %}{% endblock %}
+{% block title%}{% translate "Login" %} - {% endblock %}
 
 {% block content %}
 <div class="container border rounded-5 shadow" style="max-width: 540px; background-color: white;">
