--- a/feedbackSystem/feedback/templates/feedback/submit.html
+++ b/feedbackSystem/feedback/templates/feedback/submit.html
@@ -1,6 +1,11 @@
 {% extends 'feedback/home.html' %}
-
 {% load i18n %}
+
+{% block title %}{% translate "Submit Feedback" %} - {% endblock %}
+
+{% block linkHome %} link-body-emphasis{% endblock %}
+{% block linkSubmit %} active{% endblock %}
+{% block linkProfile %} link-body-emphasis{% endblock %}
 
 {% block content %}
 <div class="container" id="main" style="width: auto;">
