--- a/feedbackSystem/access/templates/access/home.html
+++ b/feedbackSystem/access/templates/access/home.html
@@ -165,12 +165,19 @@
                     <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
                         <ul class="nav flex-column">
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center gap-2 active" aria-current="page"
-                                    href="{% url 'accessIndex' %}">
+                                <a class="nav-link d-flex align-items-center gap-2 active" aria-current="page" href="{% url 'accessIndex' %}">
                                     <svg class="bi">
                                         <use xlink:href="#house-fill"></use>
                                     </svg>
                                     {% translate 'Dashboard' %}
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link d-flex align-items-center gap-2" href="{% url 'accessUsers' %}">
+                                    <svg class="bi">
+                                        <use xlink:href="#people"></use>
+                                    </svg>
+                                    {% translate 'Users' %}
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -187,14 +194,6 @@
                                         <use xlink:href="#cart"></use>
                                     </svg>
                                     Products
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center gap-2" href="#">
-                                    <svg class="bi">
-                                        <use xlink:href="#people"></use>
-                                    </svg>
-                                    {% translate 'Users' %}
                                 </a>
                             </li>
                             <li class="nav-item">
@@ -309,9 +308,9 @@
                                 {% translate 'This year' %}
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">January</a></li>
-                                <li><a class="dropdown-item" href="#">December</a></li>
-                                <li><a class="dropdown-item" href="#">November</a></li>
+                                {% for month in last3Months %}
+                                <li><a class="dropdown-item" href="#">{{ month.0 }} {{ month.1 }}</a></li>
+                                {% endfor %}
                             </ul>
                         </div>
                     </div>
