--- a/feedbackSystem/access/templates/access/users.html
+++ b/feedbackSystem/access/templates/access/users.html
@@ -2,16 +2,19 @@
 {% load static %}
 {% load i18n %}
 
+{% block title %}{% translate 'Users' %} - {% endblock %}
+{% block mainTitle %}{% translate 'Users' %}{% endblock %}
+
 {% block content %}
 <canvas class="my-4 w-100" id="myChart" width="1099" height="464" style="display: block; box-sizing: border-box; height: 154px; width: 366px;"></canvas>
 
-<h2>{% translate 'Top Police Stations' %}</h2>
+<h2>{% translate 'Top Users' %}</h2>
 <div class="table-responsive small">
     <table class="table table-striped table-sm text-center table-hover">
         <thead>
             <tr>
                 <th scope="col">#</th>
-                <th scope="col">{% translate 'Station Name' %}</th>
+                <th scope="col">{% translate 'User Name' %}</th>
                 <th scope="col">{% translate 'No. of Feedbacks' %}</th>
                 <th scope="col">{% translate 'Positive Experience' %}</th>
                 <th scope="col">{% translate 'Neutral Experience' %}</th>
@@ -19,14 +22,14 @@
             </tr>
         </thead>
         <tbody>
-            {% for station in stations %}
+            {% for user in users %}
             <tr>
                 <td>{{ forloop.counter }}</td>
-                <td>{{ station.0 }}</td>
-                <td>{{ station.1 }}</td>
-                <td>{{ station.2 }}</td>
-                <td>{{ station.3 }}</td>
-                <td>{{ station.4 }}</td>
+                <td>{{ user.0 }}</td>
+                <td>{{ user.1 }}</td>
+                <td>{{ user.2 }}</td>
+                <td>{{ user.3 }}</td>
+                <td>{{ user.4 }}</td>
             </tr>
             {% endfor %}
         </tbody>
@@ -45,7 +48,7 @@
             data: {
                 labels: [{% for label in labels %}"{{ label.0 }} {{ label.1 }}",{% endfor %}],
                 datasets: [{
-                    label: "{% translate 'Feedbacks Submitted' %}",
+                    label: "{% translate 'User Accounts' %}",
                     data: [{% for data in dataset %}{{ data }},{% endfor %}],
                     lineTension: 0,
                     backgroundColor: 'transparent',
