Chat Bot Setup Start

--- a/feedbackSystem/base/templates/base/home.html
+++ b/feedbackSystem/base/templates/base/home.html
@@ -1,3 +1,4 @@
+{% spaceless %}
 {% load static %}
 {% load i18n %}
 {% get_current_language as LANGUAGE_CODE %}
@@ -19,7 +20,7 @@
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
           <div class="col-md-3 mb-2 mb-md-0">
             <a href="{{ request.path|urlencode }}" class="d-inline-flex link-body-emphasis text-decoration-none">
-              <img class="bi" src="{% static 'img/rp_logo.png' %}" width="32" height="32" role="img" aria-label="Rajasthan Police"></img>
+              <img class="bi" src="{% static 'img/rp_logo.png' %}" width="32" height="32" role="img" aria-label="Rajasthan Police" />
             </a>
           </div>
     
@@ -55,3 +56,4 @@
     {% endblock %}
 </body>
 </html>
+{% endspaceless %}
