--- a/feedbackSystem/feedback/templates/feedback/home.html
+++ b/feedbackSystem/feedback/templates/feedback/home.html
@@ -1,3 +1,4 @@
+{% spaceless %}
 {% load static %}
 {% load i18n %}
 {% get_current_language as LANGUAGE_CODE %}
@@ -110,3 +111,4 @@
     </div>
 </body>
 </html>
+{% endspaceless %}
