--- a/feedbackSystem/access/templates/access/home.html
+++ b/feedbackSystem/access/templates/access/home.html
@@ -1,3 +1,4 @@
+{% spaceless %}
 {% load static %}
 {% load i18n %}
 {% get_current_language as LANGUAGE_CODE %}
@@ -340,3 +341,4 @@
 </body>
 
 </html>
+{% endspaceless %}
