--- a/feedbackSystem/access/templates/access/home.html
+++ b/feedbackSystem/access/templates/access/home.html
@@ -299,6 +299,7 @@
                         <div class="btn-group me-2">
                             <a href="{% url 'siteIndex' %}" role="button" class="btn btn-sm btn-outline-secondary">{% translate 'Home' %}</a>
                             <a href="{% url 'feedbackIndex' %}" role="button" class="btn btn-sm btn-outline-secondary">{% translate 'Feedbacks' %}</a>
+                            <a href="{% url 'chatIndex' %}" role="button" class="btn btn-sm btn-outline-secondary">{% translate 'Chat' %}</a>
                         </div>
                         <div class="dropdown">
                             <button class="btn btn-sm btn-outline-secondary dropdown-toggle d-flex align-items-center gap-1"
